Fix : Image flickers issue fixed in login and register from

--- a/src/styles/login/login.scss
+++ b/src/styles/login/login.scss
@@ -52,12 +52,9 @@
 }
 
 .bag-gif {
-  // width: 160px;
   height: 100px;
-  margin: auto;
   margin-bottom: -20px;
   background-size: cover;
-  background-color: transparent;
   margin-left: 21.5%;
 }
 
@@ -65,28 +62,20 @@
   width: 120px;
   height: 120px;
   margin-bottom: -40px;
-  background-color: transparent;
-  background-size: cover;
   margin-left: 27%;
-  z-index: -1000;
 }
 
 .dog-gif {
   width: 120px;
   height: 100px;
-  margin: auto;
   margin-bottom: -30px;
   background-size: cover;
-  background-color: transparent;
   margin-left: 32%;
 }
 .cycle-gif {
   width: 120px;
   height: 100px;
-  margin: auto;
   margin-bottom: -31px;
-  background-size: cover;
-  background-color: transparent;
   margin-left: 32%;
 }
 
